# jdiff

./: Cargo.toml  LICENSE.txt  README.md  left.json  patches.json  right.json
.github/workflows/: ci_build.yaml
cacher/: cacher.py
src/: lib.rs  main.rs
test/: README.md  applypatches.sh  makehistory.py  makepatches.py  rdiffout.txt  repodata.json.zstd  repodiff.json.zstd  zdiffout.txt
