[package]
name = "jpatchset"
version = "0.1.0"
edition = "2021"

[lib]
name = "jpatchset"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json-patch = "*"
serde_json = "*"
serde = "*"
blake2 = "*"
clap = { version = "*", features = ["derive"] }